<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDivider"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_menu_imageSlider"
            android:layout_alignParentTop="true" />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pager"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-30dp"
            android:gravity="bottom"
            android:padding="10dip"
            app:centered="true"
            app:fillColor="@color/colorWhite"
            app:pageColor="@color/colorDivider"
            app:snap="false" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_menu_main"
        android:layout_margin="@dimen/margin_menu_main"
        android:layout_weight="2"
        android:background="@color/colorDivider"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_menu_subMain"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/karyawan"
                android:layout_width="@dimen/width_menu_card"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_menu_card"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_image"
                        android:layout_weight="2"
                        android:padding="@dimen/menu_image_padding"
                        android:src="@drawable/ic_suit" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_textMenu"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/karyawan"
                        android:textSize="@dimen/textSize_menu_main" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/presensi_harian"
                android:layout_width="@dimen/width_menu_card"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_menu_card"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_image"
                        android:layout_weight="2"
                        android:padding="@dimen/menu_image_padding"
                        android:src="@drawable/ic_presensi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_textMenu"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/presensi_harian"
                        android:textSize="@dimen/textSize_menu_main" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cuti"
                android:layout_width="@dimen/width_menu_card"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_menu_card"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_image"
                        android:layout_weight="2"
                        android:padding="@dimen/menu_image_padding"
                        android:src="@drawable/ic_cuti" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_textMenu"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cuti"
                        android:textSize="@dimen/textSize_menu_main" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/slip_gaji"
                android:layout_width="@dimen/width_menu_card"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_menu_card"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_image"
                        android:layout_weight="2"
                        android:padding="@dimen/menu_image_padding"
                        android:src="@drawable/ic_slip" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_textMenu"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/slip_gaji"
                        android:textSize="@dimen/textSize_menu_main" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/informasi_perusahaan"
                android:layout_width="@dimen/width_menu_card"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_menu_card"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_image"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:padding="@dimen/menu_image_padding"
                        android:src="@drawable/ic_informasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_menu_textMenu"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/profil_perusahaan"
                        android:textSize="@dimen/textSize_menu_main" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </View>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

    </View>

</LinearLayout>
